--- a/src/css/Features.module.css
+++ b/src/css/Features.module.css
@@ -19,6 +19,19 @@
   font-size: 1.1rem;
 }
 
+.featureButtonSecondary {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: var(--n4c-button-secondary-width);
+  font-size: 13pt;
+}
+
+.featureButtonSecondary > * {
+  text-align: center;
+  word-wrap: break-word;
+}
+
 .featureSvg {
   display: flex;
   justify-content: center;
