--- a/src/css/Features.module.css
+++ b/src/css/Features.module.css
@@ -13,23 +13,13 @@
   flex-direction: column;
   align-items: center;
   background-color: unset;
-  border: none;
   width: var(--n4c-button-width);
-  padding: var(--n4c-button-vpad) var(--n4c-button-hpad);
+  margin: var(--n4c-button-vpad);
   font-size: 1.1rem;
 }
 
-.featureButtonSecondary {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: var(--n4c-button-secondary-width);
-  font-size: 13pt;
-}
-
-.featureButtonSecondary > * {
-  text-align: center;
-  word-wrap: break-word;
+.featureButtonIndex {
+  border: none;
 }
 
 .featureSvg {
