fix: update font imports to only include Latin subset for reduced CSS bloat

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -11,10 +11,11 @@
 
 /* @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,400;0,600;1,400;1,600&display=swap'); */
 
-@import "@fontsource/ibm-plex-sans/400.css";
-@import "@fontsource/ibm-plex-sans/600.css";
-@import "@fontsource/ibm-plex-sans/400-italic.css";
-@import "@fontsource/ibm-plex-sans/600-italic.css";
+/* Only import Latin subset for required font weights to minimize CSS bloat */
+@import "@fontsource/ibm-plex-sans/400-latin.css";
+@import "@fontsource/ibm-plex-sans/600-latin.css";
+@import "@fontsource/ibm-plex-sans/400-italic-latin.css";
+@import "@fontsource/ibm-plex-sans/600-italic-latin.css";
 
 /********** Global variables ************/
 
