--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -11,11 +11,8 @@
 
 /* @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,400;0,600;1,400;1,600&display=swap'); */
 
-/* Only import Latin subset for required font weights to minimize CSS bloat */
-@import "@fontsource/ibm-plex-sans/latin-400.css";
-@import "@fontsource/ibm-plex-sans/latin-600.css";
-@import "@fontsource/ibm-plex-sans/latin-400-italic.css";
-@import "@fontsource/ibm-plex-sans/latin-600-italic.css";
+/* Self-hosted subsetted fonts from /static/fonts */
+@import "./fonts.css";
 
 /********** Global variables ************/
 
