chore: adapt copyright message and improve styling

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -182,6 +182,54 @@
   margin-bottom: var(--ifm-heading-margin-bottom);
 }
 
+.footer__copyright {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer__copyright--image {
+  margin: 1rem;
+}
+
+.footer__copyright--text {
+  margin: 0.1rem;
+  text-align: left;
+  max-width: 100%;
+}
+
+.footer__copyright--text p {
+  text-align: left;
+  text-wrap: balance;
+}
+
+.footer__copyright--text a {
+  color: var(--ifm-footer-link-color);
+  font-weight: unset;
+}
+
+@media screen and (max-width: 1400px) {
+  .footer__copyright {
+    flex-direction: column;
+    align-items: stretch;
+  }
+
+  .footer__copyright--image {
+    margin: 0.5rem;
+  }
+
+  .footer__copyright--text {
+    margin: 0.1rem;
+    max-width: 100%;
+    justify-content: center;
+  }
+
+  .footer__copyright--text p {
+    text-align: center;
+  }
+}
+
 /********** Buttons ************/
 
 .buttons {
